--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
 	],
 	"require": {
 		"php": ">=7.1.0",
-		"typo3/cms-core": "^9.5 || ^10.0 || 10.*@dev"
+		"typo3/cms-core": "^8.7 || ^9.5 || ^10.0 || 10.*@dev"
 	},
 	"replace": {
 		"mediace": "*"
